0.04
 - API Change: Remove 'icon_char' and 'icon_url' parameters.
 - Improve DESCRIPTION sections in doc.

0.03 2025-02-09T17:08:43+01:00
 - Add DESCRIPTION section to doc.
 - Change API: Add 'icon' parameter with Data::Icon object.
 - Deprecate 'icon_char' and 'icon_url' parameters.
 - Fix doc.
 - Update copyright years.

0.02 2024-09-16T21:57:04+02:00
 - API Change: Rename 'url' parameter to 'uri' and fix validity.
 - Add SEE ALSO sections to doc.

0.01 2024-09-15T13:35:56+02:00
 - First version.