@@ -2,6 +2,7 @@ Changes
 CONCEPT
 examples/create_infobox_item_object_and_print.pl
 examples/create_infobox_object_and_print.pl
+examples/create_items_fixture_object_and_print.pl
 examples/create_street_fixture_object_and_print.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
@@ -16,6 +17,7 @@ inc/Module/Install/Win32.pm
 inc/Module/Install/WriteAll.pm
 lib/Data/InfoBox.pm
 lib/Data/InfoBox/Item.pm
+lib/Test/Shared/Fixture/Data/InfoBox/Items.pm
 lib/Test/Shared/Fixture/Data/InfoBox/Street.pm
 LICENSE
 Makefile.PL
@@ -33,6 +35,10 @@ t/Data-InfoBox/01-use.t
 t/Data-InfoBox/02-version.t
 t/Data-InfoBox/03-new.t
 t/Data-InfoBox/04-items.t
+t/Test-Shared-Fixture-Data-InfoBox-Items/01-use.t
+t/Test-Shared-Fixture-Data-InfoBox-Items/02-version.t
+t/Test-Shared-Fixture-Data-InfoBox-Items/03-new.t
+t/Test-Shared-Fixture-Data-InfoBox-Items/04-items.t
 t/Test-Shared-Fixture-Data-InfoBox-Street/01-use.t
 t/Test-Shared-Fixture-Data-InfoBox-Street/02-version.t
 t/Test-Shared-Fixture-Data-InfoBox-Street/03-new.t
@@ -41,5 +47,7 @@ xt/Data-InfoBox-Item/01-pod_coverage.t
 xt/Data-InfoBox-Item/02-pod.t
 xt/Data-InfoBox/01-pod_coverage.t
 xt/Data-InfoBox/02-pod.t
+xt/Test-Shared-Fixture-Data-InfoBox-Items/01-pod_coverage.t
+xt/Test-Shared-Fixture-Data-InfoBox-Items/02-pod.t
 xt/Test-Shared-Fixture-Data-InfoBox-Street/01-pod_coverage.t
 xt/Test-Shared-Fixture-Data-InfoBox-Street/02-pod.t
