@@ -18,10 +18,14 @@ name 'Data-InfoBox';
 perl_version 5.008;
 readme_from 'lib/Data/InfoBox.pm';
 recursive_author_tests('xt');
+requires 'Data::Icon' => 0;
+requires 'Data::InfoBox' => 0;
+requires 'Data::InfoBox::Item' => 0.03;
 requires 'Data::Text::Simple' => 0;
 requires 'Mo' => 0;
 requires 'Mo::utils' => 0.21;
 requires 'Mo::utils::URI' => 0.02;
+requires 'Unicode::UTF8' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Data-InfoBox/issues';
 resources 'homepage' => 'https://github.com/michal-josef-spacek/Data-InfoBox';
 resources 'repository' => 'git://github.com/michal-josef-spacek/Data-InfoBox';
